--- a/form.html
+++ b/form.html
@@ -17,7 +17,7 @@ BRANCH:
 <br><br>
 <select name="select">
 <option value="CSE"> CSE </option>
-<option value="IT"> IT </option>
+<option value="IT"> ICT </option>
 <option value="CCE"> CCE </option>
 <option value="EEE"> EEE </option>
 <option value="ECE"> ECE </option>
