--- a/form.html
+++ b/form.html
@@ -21,6 +21,7 @@ BRANCH:
 <option value="CCE"> CCE </option>
 <option value="EEE"> EEE </option>
 <option value="ECE"> ECE </option>
+<option value="ICE"> ICE </option>
 </select>
 <br><br>
 <input type="submit" value="SUBMIT" />
